fix: Alignwide GB block layout adds horizontal scrollbar on medium deices

--- a/assets/css/unminified/style-flex.css
+++ b/assets/css/unminified/style-flex.css
@@ -2785,8 +2785,8 @@ li.ast-masthead-custom-menu-items .ast-search-icon .astra-search-icon {
 }
 
 .ast-no-sidebar .entry-content .alignwide {
-  margin-left: -100px;
-  margin-right: -100px;
+  margin-left: calc(-41vw + 50%);
+  margin-right: calc(-41vw + 50%);
   max-width: unset;
   width: unset;
 }
