--- a/sass/site/primary/_gutenberg.scss
+++ b/sass/site/primary/_gutenberg.scss
@@ -16,8 +16,8 @@
 		}
 
 		.alignwide {
-			margin-left: -100px;
-			margin-right: -100px;
+			margin-left: calc(-41vw + 50%);
+			margin-right: calc(-41vw + 50%);
 			max-width: unset;
 			width: unset;
 			.alignfull,
